<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btBorrar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorAccent"
        android:onClick="borrar"
        android:text="@string/borrar"
        app:layout_constraintStart_toEndOf="@+id/btpun"
        app:layout_constraintTop_toBottomOf="@+id/btigual" />

    <Button
        android:id="@+id/btpun"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="BtPun"
        android:text="@string/Point"
        app:layout_constraintStart_toEndOf="@+id/btc"
        app:layout_constraintTop_toBottomOf="@+id/button0" />

    <Button
        android:id="@+id/btdiv"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/holo_purple"
        android:onClick="divicion"
        android:text="@string/_divicion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btigual"
        app:layout_constraintTop_toBottomOf="@+id/btmul" />

    <Button
        android:id="@+id/btmul"
        android:layout_width="65dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/holo_purple"
        android:onClick="multiplicacion"
        android:text="@string/_multiplication1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt3"
        app:layout_constraintTop_toBottomOf="@+id/btres" />

    <Button
        android:id="@+id/btres"
        android:layout_width="72dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/holo_purple"
        android:onClick="resta"
        android:text="@string/_menos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt6"
        app:layout_constraintTop_toBottomOf="@+id/btsum" />

    <Button
        android:id="@+id/btsum"
        android:layout_width="78dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/holo_purple"
        android:onClick="suma"
        android:text="@string/Plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt9"
        app:layout_constraintTop_toBottomOf="@+id/Display" />

    <Button
        android:id="@+id/btigual"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorAccent"
        android:onClick="igual"
        android:text="@string/_equals"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/btc"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorAccent"
        android:onClick="clear"
        android:text="@string/c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt1" />

    <Button
        android:id="@+id/button0"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="Bt0"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/bt1"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="Bt1"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt4" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="Bt2"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@+id/bt1"
        app:layout_constraintTop_toBottomOf="@+id/bt5" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="Bt3"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@+id/bt2"
        app:layout_constraintTop_toBottomOf="@+id/bt6" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="Bt4"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt7" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="Bt5"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@+id/bt4"
        app:layout_constraintTop_toBottomOf="@+id/bt8" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="Bt6"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@+id/bt5"
        app:layout_constraintTop_toBottomOf="@+id/bt9" />

    <Button
        android:id="@+id/bt9"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="Bt9"
        android:text="@string/_9"
        app:layout_constraintStart_toEndOf="@+id/bt8"
        app:layout_constraintTop_toBottomOf="@+id/Display" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="Bt7"
        android:text="@string/_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Display" />

    <EditText
        android:id="@+id/Display"
        style="@style/Base.TextAppearance.AppCompat.Display3"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        tools:targetApi="o" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="Bt8"
        android:text="@string/_8"
        app:layout_constraintStart_toEndOf="@+id/bt7"
        app:layout_constraintTop_toBottomOf="@+id/Display" />

</androidx.constraintlayout.widget.ConstraintLayout>